Add request code handler
