# lambda_functions/v1/openapi/lpa-openapi.yml
@@ -331,6 +331,41 @@ paths:
           description: The Sirius data provider returned an exception
         '504':
           description: The Sirius data provider timed out
+  /use-an-lpa/lpas/requestCode:
+    post:
+      security:
+        - sigv4: []
+      x-amazon-apigateway-request-validator: "all"
+      x-amazon-apigateway-integration:
+        uri: arn:aws:apigateway:${region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${region}:${account_id}:function:$${stageVariables.flask_app_name}/invocations
+        responses:
+          default:
+            statusCode: "204"
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        contentHandling: "CONVERT_TO_TEXT"
+        type: "aws_proxy"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - case_uid
+                - actor_uid
+              properties:
+                actor_uid:
+                  type: integer
+                case_uid:
+                  type: integer
+      responses:
+        '204':
+          description: Letter was successfully enqueued
+        '400':
+          description: Invalid request
+        '500':
+          description: Unexpected error
 components:
   securitySchemes:
     sigv4:
